# minsta-contract-rs

./: Cargo.toml
neardev/: dev-account  dev-account.env
src/: lib.rs
