[package]
name = "minsta_proxy_minter"
version = "0.0.1"
authors = ["microchipgnu"]
edition = "2018"

[dependencies]
near-sdk = "4.0.0-pre.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near_groth16_verifier="1.0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true